# HireSight

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
backend/: app.py  main.py
backend/agents/: agent_definitions.py  client.py
backend/configurations/: app_configurations.py  openai_client_config.py
backend/evals/: eval.py
backend/evals/ground_truth/: ground_truth.json
backend/evals/results/: generated_output.json  results2.csv
backend/schemas/: structured_output.py
backend/tools/: resume_parser.py
config/: config.py
evals/: eval.py
frontend/: Home.py
frontend/.streamlit/: config.toml
frontend/pages/: 01_Recruiter_Dashboard.py  02_Candidate_Insights.py  Recruiter.py
ground_truth/: ground_truth.json
results/: generated_output  results2.csv
structured_output/: structured_output.py
