[project]
name = "HireSight"
version = "0.1.0"
dependencies = [
    "pydantic",
    "python-dotenv",
    "markitdown[pdf]",
    "openai",
    "thefuzz[speedup]",
    "openai-agents",
    "mcp[cli]",
    "httpx",
    "uvicorn",
    "fastapi-mcp",
    "python-multipart",
    "pypdf>=5.4.0",
    "streamlit>=1.45.0",
]

[tool.setuptools]
packages = ["backend"]
